<resources>
    <string name="app_name">AgileUs</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_mensajes">Mensajes</string>
    <string name="title_tareas">Tareas</string>
    <string name="title_reportes">Reportes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="crear_tarea">Crear Tarea</string>
    <string name="fecha_de_vencimiento">Fecha de Vencimiento</string>
    <string name="fecha_de_inicio">Fecha de Inicio</string>
    <string name="nombre_de_la_tarea">Nombre de la tarea</string>
    <string name="descripcion">Descripcion</string>
    <string name="prioridad">Prioridad</string>
    <string name="persona_asignada">Persona Asignada</string>
    <string name="BtnCambiarEstadoDialogo">Cambiar estado</string>
    <string name="contacts_name">Contactos</string>
    <string name="chats_name">chatsFragment</string>

    //Array spin prioridad tarea
    <string-array name="prioridad_array">
        <item>Baja</item>
        <item>Media</item>
        <item>Alta</item>
    </string-array>

    //StatusArrayBaja
    <string-array name="statusRecycler_array">
        <item>Pendientes</item>
        <item>Iniciadas</item>
        <item>En Revisión</item>
        <item>Terminadas</item>
        <item>Asignadas</item>
    </string-array>

    <string-array name="status_array">
        <item>pendiente</item>
        <item>iniciada</item>
        <item>revision</item>
        <item>terminada</item>
        <item>asignada</item>
    </string-array>

    <string name="mensaje_nuevo">Mensaje nuevo</string>
    <string name="comunicados">Comunicados</string>
    <string name="destinatario">Destinatario :</string>
    <string name="asunto">Asunto</string>
    <string name="name_contactos_fragment">Contactos</string>

    <string name="titleStatus1">Tareas Pendientes</string>
    <string name="titleStatus2">Tareas Iniciadas</string>
    <string name="titleStatus3">Tareas en Revisión</string>
    <string name="titleStatus4">Tareas Terminadas</string>
    <string name="titleStatus5">Tareas Asignadas</string>
    <string name="respAceptar">Aceptar</string>
    <string name="respCancelar">Cancelar</string>
    <string name="GuardarTarea">Guardar Tarea</string>
    <string name="AdjuntarArchivo">Adjuntar Archivo</string>
    <string name="dialogoAceptar">dialogoAceptar</string>
    <string name="title_tareas_fragment">Lista de Tareas</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login_login_button">Iniciar sesión</string>
    <string name="login_olvidado">¿Olvidaste tu contraseña?</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_in_short">SignIn</string>
    <string name="Login">fragment_login</string>
    <string name="mensaje1">Estamos enviando el comunicado , Espere por favor</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="legendtext1">Enviados</string>
    <string name="legendtext2">Recibidos</string>
    <string name="legendtext3">Totales</string>
    <string name="legendtext4">Leidos</string>
    <string name="Month">Mes</string>
    <string name="SaveOption">Guardar</string>
    <string name="logtareas">MensajeTareas</string>
    <string name="noarchivo">No se selecciono archivo</string>
    <string name="logTareas">logTareas</string>
    <string name="faltanDatosAgregar">Faltan datos por agregar.</string>
    <string name="confirmacionDialogo">Confirmacion</string>
    <string name="noencontraronpersonas">No se encontraron personas en el grupo</string>
    <string name="fechaInicioCrearTareas">\"Fecha Inicio: \"</string>
    <string name="fechaFinCrearTareas">"Fecha Fin: "</string>
    <string name="tareaCreada">Tarea Creada</string>
    <string name="errorCrearTarea">No se pudo crear la tarea</string>
    <string name="DocumentosDetallesTarea">Documentos</string>
    <string name="fragmentSeleccionadoDetallesTarea">verDetalleTarea</string>
    <string name="dialogEditFecha">Edt fecha</string>
    <string name="namepdfDownload">archivo</string>
    <string name="descripcionnovacia">La descripcion no puede quedar vacia</string>
    <string name="archivoseleccionado">Archivo seleccionado</string>
    <string name="archivonoencontrado">Archivo no encontrado</string>
    <string name="archivonoseleccionado">No se selecciono archivo</string>
    <string name="prioridadtxt">\"Prioridad: \"</string>
    <string name="TareaTerminada">Tarea Terminada</string>
    <string name="tareaCancelada">Tarea Cancelada</string>
    <string name="tareasCanceladas">Cancelado</string>
    <string name="nivelAlto">alto</string>
    <string name="nivelMedio">medio</string>
    <string name="nivelBajo">bajo</string>
    <string name="fragmentSeleccionadoCrearTarea">crearTarea</string>
    <string name="correo">Correo Electrónico</string>
    <string name="fecha_mayor_menor">Fecha de inicio no puede ser mayor a fecha de vencimiento.</string>
    <string name="confirmar">Confirmar.</string>
    <string name="nohayconexioninternet">No hay conexion a internet</string>
    <string name="taskReportFragment">TaskReportFragment</string>

    <string-array name="months_array">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

</resources>