<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.modulotareas.creartareas.FormularioCrearTareasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <!--      TEXTINPUTLAYOUT TITULO    -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_de_la_tarea">
            <!--      EDIT TEXT      -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_agrega_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true"
                >
            </com.google.android.material.textfield.TextInputEditText>
            <!--      EDIT TEXT      -->
        </com.google.android.material.textfield.TextInputLayout>
        <!--      TEXTINPUTLAYOUT TITULO    -->

        <!--      LINEAR PERSONA ASIGNADA    -->
        <LinearLayout
            android:id="@+id/linear_persona_asignada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/persona_asignada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                />
            <Spinner
                android:id="@+id/spinPersonaAsignada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
        <!--      LINEAR PERSONA ASIGNADA    -->

        <!--      LINEAR PRIORIDAD    -->
        <LinearLayout
            android:id="@+id/linear_prioridad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/prioridad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                />
            <Spinner
                android:id="@+id/spinPrioridad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
        <!--      LINEAR PRIORIDAD    -->

        <EditText
            android:id="@+id/edt_fecha_inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:text="@string/fecha_de_inicio"

            />

        <EditText
            android:id="@+id/edt_fecha_fin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:text="@string/fecha_de_vencimiento"

            />


        <!--      TEXTINPUTLAYOUT  DESCRIPCION    -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            >

            <!--      EDIT TEXT      -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_descripcion"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:imeOptions="actionDone"
                android:singleLine="false"
                android:textAlignment="textStart"
                >
            </com.google.android.material.textfield.TextInputEditText>
            <!--      EDIT TEXT      -->
        </com.google.android.material.textfield.TextInputLayout>
        <!--      TEXTINPUTLAYOUT  DESCRIPCION    -->



        <Button
            android:id="@+id/btn_Crear_Tarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_tarea"
            android:onClick="crearTarea"
            />


    </LinearLayout>



</FrameLayout>